--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <main class="main">
       <!-- Vista previa -->
       <section class="main__home home" id="home">
-        <h1 class="home__title">NAME SURNAME</h1>
+        <h1 class="home__title">Javier Alcazar</h1>
         <p class="home__subtitle">WEB-DEVELOPER, PYTHON PROGRAMMER</p>
       </section>
       <!-- Acerca de mí -->
@@ -37,9 +37,8 @@
         <h2 class="about__title">ABOUT ME</h2>
         <div class="about__info info-block">
           <p class="info-block__text">
-            Inform about me Inform about me Inform about me Inform about me
-            Inform about me Inform about me Inform about me Inform about me
-            Inform about me
+            Tengo 14 años, tengo amplios conocimentos de python y HTML, Domino el Español como el ingles
+            Trabajo con Visual Code, soy alguien eficiente y entrego los trabajos Solicitado al tiempo.
           </p>
           <img
             class="info-block__img"
@@ -52,7 +51,7 @@
       </section>
       <!-- Sección de competencias -->
       <section class="main__skills skills" id="skills">
-        <h2 class="skills__title">MY SKILLS</h2>
+        <h2 class="skills__title">Mis Habilidades</h2>
         <form action="/" method="POST">
           <ul class="skills__list skills-list">
             <li class="skills-list__skill skill">
@@ -104,21 +103,47 @@
         {% if button_python%}
           <div class="skills__project project" id="project">
               <img class="project__img" src="../static/img/python-project.png" alt="project" width="500">
-              <a class="project__link" href="">Abierto en GitHub</a>
+              <a class="project__link" href="https://github.com/Aglow9/calculator_esp.git">Abierto en GitHub</a>
           </div>
         {% endif %}
+
+        {% if button_db%}
+          <div class="skills__project project" id="project">
+            <img class="project__img" src="../static/img/Diario.png" alt="project" width="500">
+            <a class="project__link" href="https://github.com/Aglow9/diary-esp.git">Abierto en GitHub</a>
+          </div>
+        {% endif %}
+
+        {% if button_discord%}
+        <div class="skills__project project" id="project">
+          <img class="project__img" src="../static/img/Bot.png" alt="project" width="500">
+          <a class="project__link" href="https://github.com/Aglow9/bot_medio_ambiente.git">Abierto en GitHub</a>
+        </div>
+      {% endif %}
+
+      {% if button_html%}
+      <div class="skills__project project" id="project">
+        <img class="project__img" src="../static/img/web.png" alt="project" width="500">
+        <a class="project__link" href="https://github.com/Aglow9/meme-generator-esp.git">Abierto en GitHub</a>
+      </div>
+    {% endif %}
+
+
+    
+
+
       </section>
       <!-- Formulario de contacto -->
       <section class="main__feedback feedback" id="feedback">
         <h2 class="feedback__title">FEEDBACK</h2>
-        <form action="" method="POST" class="feedback__form form">
+        <form action="{{ url_for('index') }}" method="POST" class="feedback__form form">
           <label for="email">
-            <input type="email" class="form__input" name="email" id="email" placeholder="Введите E-mail" required>
+            <input type="email" class="form__input" name="email" id="email" placeholder="escriba su E-mail" required>
           </label>
           <label for="text">
-            <textarea name="text" class="form__input" id="text" cols="70" rows="10" required placeholder="Comment"></textarea>
+            <textarea name="text" class="form__input" id="text" cols="70" rows="10" required placeholder="Comentario"></textarea>
           </label>
-          <button class="form__button" type="submit">SEND</button>
+          <button class="form__button" type="submit">ENVIAR</button>
         </form>
       </section>
     </main>
